<resources>
    <string name="app_name">CIS298Assignment3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wine_name_hint">This is Wine Name</string>

    <string name="wine_name_label">Name</string>


    <string name="wine_item_number_label">Id:</string>
    <string name="wine_item_number_hint">This is Wine Id</string>

    <string name="wine_pack_label">Pack:</string>
    <string name="wine_pack_hint">This is Wine Pack</string>

    <string name="wine_price_label">Price:</string>
    <string name="wine_price_hint">This is Wine Price</string>

    <string name="wine_active_label">Active:</string>

</resources>
