
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- Name-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_name_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="100dp"/>

        <EditText
            android:id="@+id/wine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wine_name_hint"/>

    </LinearLayout>

    <!--Item Number-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_item_number_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_weight="1.34"/>

        <EditText
            android:id="@+id/wine_item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/wine_item_number_hint"
            android:layout_weight="2"/>

    </LinearLayout>

    <!--Wine Pack-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_pack_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_weight="1.18"/>

        <EditText
            android:id="@+id/wine_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/wine_pack_hint"
            android:layout_weight="2"/>

    </LinearLayout>



    <!--Wine Price-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_price_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_weight="1.13"/>

        <EditText
            android:id="@+id/wine_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/wine_price_hint"
            android:layout_weight="2"/>
    </LinearLayout>

    <!--Wine Active-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine_active_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_weight="0.24" />


        <CheckBox
            android:id="@+id/wine_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"/>
            <!--android:text="@string/wine_active_label"-->


    </LinearLayout>




</LinearLayout>